--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,21 @@
 apply plugin: 'war'
-
-war.baseName = 'OSC-Monitor'
+apply plugin: 'org.akhikhl.gretty'
 
 repositories {
-  jcenter()
+    jcenter()
 }
 
 dependencies {
-  compile 'junit:junit:4.12'
-  providedCompile 'javax.websocket:javax.websocket-api:1.1'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+    providedCompile 'javax.websocket:javax.websocket-api:1.1'
 }
 
-task run(dependsOn: 'war') << {
-  println 'Please deploy the generated war file on path build/libs/OSC-Monitor.war'
+buildscript {
+    repositories { jcenter() }
+    dependencies {
+        classpath 'org.akhikhl.gretty:gretty:+'
+    }
+}
+
+task run(dependsOn: 'tomcatRun') << {
 }
